k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cgp-api-svc
  labels:
    app: cgp-api
spec:
  selector:
    app: cgp-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
