k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cgp-api-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: cgp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cgp-api-svc
            port:
              number: 80
